--- a/CreatQRLink03.html
+++ b/CreatQRLink03.html
@@ -25,12 +25,15 @@
       <div class='page_box'>
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+          <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.png"></a>
           <nav>
             <div class='nav_boxs'>
               <a href="NetWorkPage01.html">JOIN an NETWORK</a>
               <a href="CreatQRLink01.html">CREATE QR LINK</a> 
-              <span class='web_no'>MENU</span> 
-              <a href="login.html" class='link_login2 order_right'>LOG IN</a> 
+              <span class='web_no'>MORE</span> 
+              <a href="login.html" class='link_login2'>LOG IN</a>
+              <!-- 9/26 新增 -->
+              <a href="#" class='link_login2 order_right magL15'>Create an Account</a> 
             </div>
           </nav>
 
@@ -52,7 +55,8 @@
               <div class='all_box padTB15 m_no_space'>
                 <p class='note_type'>Share the link or use camera to scan QR code:</p>
                 <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
+                  <!-- 9/26 新增樣式enter_hid / a 改為 p-->
+                  <div class='toEnter networklink'><p class='addEnter enter_hid' >http://selectnshare/haleyhob/haleyhob/haleyhob</p></div>
                   <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
 
