--- a/NetWorkPage01.html
+++ b/NetWorkPage01.html
@@ -29,8 +29,10 @@
             <div class='nav_boxs'>
               <a href="NetWorkPage01.html">JOIN an NETWORK</a>
               <a href="CreatQRLink01.html">CREATE QR LINK</a> 
-              <span class='web_no'>MENU</span> 
-              <a href="login.html" class='link_login2 order_right'>LOG IN</a> 
+              <span class='web_no'>MORE</span> 
+              <a href="login.html" class='link_login2'>LOG IN</a>
+              <!-- 9/26 新增 -->
+              <a href="#" class='link_login2 order_right magL15'>Create an Account</a>  
             </div>
           </nav> 
 
@@ -157,7 +159,13 @@
                   <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
                 </div>
 
-                <!-- 17.Other (personal website) -->
+                <!-- 17.Venmo --> <!-- 9/26 新增社群 -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-venmo'></div>
+                  <input class='inEnter addEnter' type="text"  value="Venmo" onfocus="this.value=''" onblur="this.value='Venmo'">
+                </div>
+
+                <!-- 18.Other (personal website) -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-www'></div>
                   <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
