--- a/NetWorkPage05.html
+++ b/NetWorkPage05.html
@@ -29,8 +29,10 @@
             <div class='nav_boxs'>
               <a href="NetWorkPage01.html">JOIN an NETWORK</a>
               <a href="CreatQRLink01.html">CREATE QR LINK</a> 
-              <span class='web_no'>MENU</span> 
-              <a href="login.html" class='link_login2 order_right'>LOG IN</a> 
+              <span class='web_no'>MORE</span> 
+              <a href="login.html" class='link_login2'>LOG IN</a>
+              <!-- 9/26 新增 -->
+              <a href="#" class='link_login2 order_right magL15'>Create an Account</a> 
             </div>
           </nav>
 
