--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
           <div class='ir_boxs magTop45'>
             <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight10'>JOIN NEW NETWORK</a>
-            <a href="CreatQRLink01.html" class='link_brightBlue have_mark m_magTop15 in_btn_r'>CREATE CUSTOM QR LINK</a>
+            <!-- 9/26 修改樣式link_brightBlue2 -->
+            <a href="CreatQRLink01.html" class='link_brightBlue2 have_mark m_magTop15 in_btn_r'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
