--- a/SavePage02.html
+++ b/SavePage02.html
@@ -25,6 +25,8 @@
       <div class='page_box'>
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+          <!-- 9/26 新增 -->
+          <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.png"></a>
           <!-- <nav>
             <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
             <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
