--- a/on_index.html
+++ b/on_index.html
@@ -32,7 +32,7 @@
             <img class='ir_img order_left' src="img/W_logo.png">
             <!-- 9/26 新增 m_ir_img-->
             <img class='m_ir_img order_left' src="img/W_logo@2x.png">
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
+            <a href="login.html" class='link_login order_right'>LOG OUT</a>
           </div>
 
           <div class='ir_boxs'>
