--- a/NetWorkPage01.html
+++ b/NetWorkPage01.html
@@ -67,12 +67,14 @@
               <div class='all_box'>
                 <!-- 01.email-->
                 <div class='input_box borderGray'>
+                  <div class='tip_box'><span class='prompt' data-showtip='email'></span></div>
                   <div class='social_box icon-email'></div>
                   <input class='inEnter addEnter' type="text" value="E-mail*" onfocus="this.value=''" onblur="this.value='E-mail*'" >
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderGray'>
+                  <div class='tip_box'><span class='prompt' data-showtip='Instagram'></span></div>
                   <div class='social_box icon-instagram'></div>
                   <input class='inEnter addEnter' type="text" value="Instagram" onfocus="this.value=''" onblur="this.value='Instagram'" >
                 </div>
