--- a/SavePage01.html
+++ b/SavePage01.html
@@ -57,19 +57,20 @@
 
             <i class='m_border_all2'></i><!-- 手機版・虛線 -->
 
-            <div class='cent_box cent_box50'>
+            <div class='cent_box'>
               <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
             </div>
           </div>
 
-          <div class='cent_boxs'>
+          <div class='cent_boxs cent_box65'>
             <!-- search -->
             <div class='cent_serch_box'>
               <div class='all_box magD30 w_not_show'>
                 <p class='type_data_title order_left'>Saved Contacts Pages</p>
               </div>
 
-              <div class='all_box box50'>
+              <!-- 9/28 新增box60 -->
+              <div class='all_box box60'>
                 <div class='input_box input_search borderBrightblue'>
                   <div class='social_box serch_box icon-search'></div>
                   <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
