--- a/NetWorkPage01.html
+++ b/NetWorkPage01.html
@@ -67,6 +67,7 @@
               <div class='all_box'>
                 <!-- 01.email-->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
                   <div class='tip_box'><span class='prompt' data-showtip='email'></span></div>
                   <div class='social_box icon-email'></div>
                   <input class='inEnter addEnter' type="text" value="E-mail*" onfocus="this.value=''" onblur="this.value='E-mail*'" >
@@ -74,6 +75,7 @@
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
                   <div class='tip_box'><span class='prompt' data-showtip='Instagram'></span></div>
                   <div class='social_box icon-instagram'></div>
                   <input class='inEnter addEnter' type="text" value="Instagram" onfocus="this.value=''" onblur="this.value='Instagram'" >
@@ -81,96 +83,128 @@
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Snapchat'></span></div>
                   <div class='social_box icon-snapchat'></div>
                   <input class='inEnter addEnter' type="text" value="Snapchat" onfocus="this.value=''" onblur="this.value='Snapchat'" >
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Facebook'></span></div>
                   <div class='social_box icon-facebook'></div>
                   <input class='inEnter addEnter' type="text" value="Facebook" onfocus="this.value=''" onblur="this.value='Facebook'" >
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Phone'></span></div>
                   <div class='social_box icon-phone'></div>
                   <input class='inEnter addEnter' type="text" value="Phone" onfocus="this.value=''" onblur="this.value='Phone'" >
                 </div>
 
                 <!-- 06.Linkedin -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Linkedin'></span></div>
                   <div class='social_box icon-linkedin'></div>
                   <input class='inEnter addEnter' type="text" value="Linkedin" onfocus="this.value=''" onblur="this.value='Linkedin'" >
                 </div>
 
                 <!-- 07.Twitter -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Twitter'></span></div>
                   <div class='social_box icon-twitter'></div>
                   <input class='inEnter addEnter' type="text" value="Twitter" onfocus="this.value=''" onblur="this.value='Twitter'" >
                 </div>
 
                 <!-- 08.YouTube -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='YouTube'></span></div>
                   <div class='social_box icon-youtube'></div>
                   <input class='inEnter addEnter' type="text" value="YouTube" onfocus="this.value=''" onblur="this.value='YouTube'" >
                 </div>
 
                 <!-- 09.Tiktok -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Tiktok'></span></div>
                   <div class='social_box icon-tiktok'></div>
                   <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
                 </div>
 
                 <!-- 10.Discord -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Discord'></span></div>
                   <div class='social_box icon-discord'></div>
                   <input class='inEnter addEnter' type="text"  value="discord" onfocus="this.value=''" onblur="this.value='discord'">
                 </div>
 
                 <!-- 11.Slack -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Slack'></span></div>
                   <div class='social_box icon-slack'></div>
                   <input class='inEnter addEnter' type="text"  value="Slack" onfocus="this.value=''" onblur="this.value='Slack'">
                 </div>
 
                 <!-- 12.Skype -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Skype'></span></div>
                   <div class='social_box icon-skype'></div>
                   <input class='inEnter addEnter' type="text"  value="Skype" onfocus="this.value=''" onblur="this.value='Skype'">
                 </div>
 
                 <!-- 13.Reddit -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Reddit'></span></div>
                   <div class='social_box icon-reddit'></div>
                   <input class='inEnter addEnter' type="text"  value="Reddit" onfocus="this.value=''" onblur="this.value='Reddit'">
                 </div>
 
                 <!-- 14.GroupMe -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='GroupMe'></span></div>
                   <div class='social_box icon-groupme'></div>
                   <input class='inEnter addEnter' type="text"  value="GroupMe" onfocus="this.value=''" onblur="this.value='GroupMe'">
                 </div>
 
                 <!-- 15.WhatsApp -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='WhatsApp'></span></div>
                   <div class='social_box icon-whatsapp'></div>
                   <input class='inEnter addEnter' type="text"  value="WhatsApp" onfocus="this.value=''" onblur="this.value='WhatsApp'">
                 </div>
 
                 <!-- 16.Line -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Line'></span></div>
                   <div class='social_box icon-line'></div>
                   <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
                 </div>
 
                 <!-- 17.Venmo --> <!-- 9/26 新增社群 -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Venmo'></span></div>
                   <div class='social_box icon-venmo'></div>
                   <input class='inEnter addEnter' type="text"  value="Venmo" onfocus="this.value=''" onblur="this.value='Venmo'">
                 </div>
 
                 <!-- 18.Other (personal website) -->
                 <div class='input_box borderGray'>
+                  <!-- 9/28 新增 tip_box -->
+                  <div class='tip_box'><span class='prompt' data-showtip='Other (personal website)'></span></div>
                   <div class='social_box icon-www'></div>
                   <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
                 </div>
