--- a/NetWorkPage03_5.html
+++ b/NetWorkPage03_5.html
@@ -75,134 +75,38 @@
 
               <div class='all_box'>
                 <!-- 01.email-->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter addEnter' type="text" value="email" onfocus="this.value=''" onblur="this.value='E-mail'">
+                  <!-- <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
                 <!-- 02.Instagram -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter addEnter' type="text" value="Instagram" onfocus="this.value=''" onblur="this.value='Instagram'">
+                  <!-- <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
                 <!-- 03.Snapchat -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 04.Facebook -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 05.Phone -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 06.Linkedin -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-linkedin'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter addEnter' type="text" value="Snapchat" onfocus="this.value=''" onblur="this.value='Snapchat'">
+                  <!-- <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
                 <!-- 07.Twitter -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-twitter'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 08.YouTube -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-youtube'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter addEnter' type="text" value="Twitter" onfocus="this.value=''" onblur="this.value='Twitter'">
+                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
                 <!-- 09.Tiktok -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
+                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'">
                   <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 10.Discord -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-discord'></div>
-                  <input class='inEnter addEnter' type="text"  value="discord" onfocus="this.value=''" onblur="this.value='discord'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 11.Slack -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-slack'></div>
-                  <input class='inEnter addEnter' type="text"  value="Slack" onfocus="this.value=''" onblur="this.value='Slack'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 12.Skype -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-skype'></div>
-                  <input class='inEnter addEnter' type="text"  value="Skype" onfocus="this.value=''" onblur="this.value='Skype'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 13.Reddit -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-reddit'></div>
-                  <input class='inEnter addEnter' type="text"  value="Reddit" onfocus="this.value=''" onblur="this.value='Reddit'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 14.GroupMe -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-groupme'></div>
-                  <input class='inEnter addEnter' type="text"  value="GroupMe" onfocus="this.value=''" onblur="this.value='GroupMe'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 15.WhatsApp -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-whatsapp'></div>
-                  <input class='inEnter addEnter' type="text"  value="WhatsApp" onfocus="this.value=''" onblur="this.value='WhatsApp'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 16.Line -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-line'></div>
-                  <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 17.Venmo -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-venmo'></div>
-                  <input class='inEnter addEnter' type="text"  value="Venmo" onfocus="this.value=''" onblur="this.value='Venmo'">
-                </div>
-
-                <!-- 18.Other (personal website) -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-www'></div>
-                  <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
-                </div>
-
-                <!-- 9/28 示意Functional中的項目12 -->
-                <div class='input_box borderBrightblue'>
-                  <div class='social_box social_box2 icon-snapchat'></div>
-                  <input class='inEnter addEnter' type="text"  value="Snapchat" onfocus="this.value=''" onblur="this.value='Snapchat'">
-                  <!-- <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
               </div>
 
