--- a/NetWorkPage04_3.html
+++ b/NetWorkPage04_3.html
@@ -57,7 +57,8 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <a href="NetWorkPage04.html" class='team_title'>Intern Team</a>
+                    <!-- 9/28新增 title_link_icon -->
+                    <a href="NetWorkPage04.html" class='team_title title_link_icon'>Intern Team</a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
