--- a/login.html
+++ b/login.html
@@ -71,10 +71,10 @@
                 <input class='magTop18' type="radio" id="huey" name="drone" value="huey">
                 <!-- 9/26 新增 padT15 樣式 -->
                 <label for="huey" class='team_type padT15' style='width:auto;'>Remember me</label>
-                <!-- 9/26 新增 padT15 樣式 -->
-                <a href="#" class='link_little magL23 padT15' style='width:100%;'>Forgot password?</a>
-                <!-- 9/26 新增 padT15 樣式 -->
-                <a href="#" class='link_little magL23 padT15' style='width:100%;'>Verify Email address</a>
+                <!-- 9/26 新增 padT15 樣式 --><!-- 9/28 新增 div all_box 樣式 -->
+                <div class='all_box'><a href="#" class='link_little magL23 padT15'>Forgot password?</a></div>
+                <!-- 9/26 新增 padT15 樣式 --><!-- 9/28 新增 div all_box 樣式 -->
+                <div class='all_box'><a href="#" class='link_little magL23 padT15 login_use'>Verify Email address</a></div>
               </div>
 
               <div class='all_box w_cent'>
